deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manfred
  labels:
    app.kubernetes.io/part-of: manfred
